# enterprise-azure-policy-as-code

./: .gitignore  404.html  CONTRIBUTING.md  Invoke-DocPreview.ps1  PolicyPipeline.yml  README (1).md  README.md  RELEASE_NOTES.md  SCaC_Documentation.md  SCaC_Documentation.txt  SUPPORT.md  Sync-FromGH.ps1  Sync-Repo.ps1  Sync-ToGH.ps1  body.txt  cspell.config.yaml  custom-words.txt  enterprise-azure-policy-as-code.code-workspace  index.html  main.bicep  mkdocs.yml  script.ps1  sitemap.xml  test.csv  test.ps1
.epac/: theme.json
.github/: FEATURE_SUMMARY.md
Assignments/: DemoInitiativeAssignment.json  DemoPolicyAssignment.json  demoAssignmentDef.json
Definitions/: README.md  global-settings.jsonc
Docs/: Assignments.md  Azure Security Controls Process.vsdx  Definitions.md  OperationalScripts.md  Pipeline.md  Scripts.md  ScriptsAndConfigurationFiles.md  advanced-configuration.md  alz-sync-tests.md  azure-devops-pipeline.md  azure-monitor-dine-siem.vsdx  breaking-changes-v6.0.md  breaking-changes.md  changes.md  ci-cd-ado-pipelines.md  ci-cd-app-registrations.md  ci-cd-branching-flows.md  ci-cd-github-actions.md  ci-cd-gitlab-pipelines.md  ci-cd-overview.md  ci-cd-pipeline.md  clone-github.md  cloud-adoption-framework.md  code-promotion-module-release-process.md  create-az-remediation-tasks.md  create-policy-reader-role.md  debugging.md  definitions-and-global-settings.md  desired-state-strategy.md  dfc-assignments.md  (+49 more)
Tools/mcp-server/: README.md  config.example.json  pyproject.toml
Tools/mcp-server/epac_mcp/: __main__.py  config.py  runners.py  server.py
(+1274 files in other folders)
